# ObsidianBot

./: .dockerignore  .gitignore  DOCKER.md  Dockerfile  Dockerfile.distroless  LICENSE  README.md  build.sh  config-example.yaml  docker-compose.yml  main.py  pyproject.toml  test_websocket.py  test_ws_client.py
src/engine/content/: base.py  local.py
src/engine/provider/llm/: base.py  openai_provider.py  registry.py  scheams.py
src/gateway/: README.md  __init__.py
src/gateway/core/: __init__.py
src/gateway/core/connection/: websocket.py
src/gateway/core/protocol/: __init__.py  base.py  milky.py  onebot.py  schemas.py
src/gateway/dispatcher/: __init__.py  dispatcher.py
src/gateway/filters/: __init__.py  base.py  content.py
src/gateway/handlers/: __init__.py  agent_handler.py  base.py  echo_handler.py  help_handler.py  summary_handler.py
src/utils/: __init__.py  config.py  http_client.py  logger.py  message_converter.py  response_builder.py
