[project]
name = "obsidianbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "cachetools>=7.0.2",
    "langchain>=1.2.10",
    "langchain-openai>=1.1.10",
    "loguru>=0.7.3",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
    "websockets>=16.0",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
